mule-user-guide/v/3.3/rollback-exception-strategy.adoc
= Rollback Exception Strategy

You can define a rollback exception strategy to ensure that a message that throws an exception in a flow is rolled back for reprocessing. Use a rollback exception strategy when you cannot _correct_ an error when it it occurs in a flow. Usually, you use a rollback exception strategy to handle errors that occur in a flow that involves a link:/docs/display/33X/Transaction+Management[transaction]. If the transaction fails — that is, if a message throws an exception while being processed — then the rollback exception strategy rolls back the transaction in the flow. If the inbound endpoint is transactional, Mule delivers the message to the inbound endpoint of the parent flow again to reattempt processing (i.e. message redelivery).

Beyond managing transactional errors, you can use a rollback exception strategy to:

* manage unhandled exceptions (i.e. exceptions which the application fails to catch)
* flows in which messages require redelivery

A rollback exception strategy has the potential to introduce an infinite loop of activity within a flow: a message throws an error, the rollback exception strategy catches the exception and rolls the message back for reprocessing; the message throws an error again, the rollback exception strategy catches the exception again and rolls the message back for reprocessing, and so on.

To avoid this infinite loop and responsibly manage unresolvable errors, you can apply two limitations to a rollback exception strategy:

* define the maximum number of times that the rollback exception strategy will attempt to redeliver the message for processing
* define a flow to handle those messages which exceed the maximum number of redelivery attempts

== Use Rollback Exception Strategy for Transactions

Unlike a link:/docs/display/33X/Catch+Exception+Strategy[catch exception strategy] which always commits a failed transaction and consumes the message, a rollback exception strategy gives a message a few attempts to move through the flow successfully before committing a failed transaction and consuming the message.

For example, suppose you have a flow that involves a bank transaction to deposit funds into an account. You configure a rollback exception strategy to handle errors that occur in this flow; when an error occurs during processing — say, a flow-external bank account database is temporarily unavailable — the message throws an exception. The rollback exception strategy catches the exception, and rolls the message back to the beginning of the flow to reattempt processing. During the second attempt at processing, the database is online again and the message successfully reaches the end of the flow.

Mule attempts message redelivery when your flow uses one of the following two types of transports: *transactional* or *reliable*.

* A *transactional* transport _consumes_ a message as it travels through the flow, transforming it to a different object, for example, or enriching it with more data. When a message using a transactional transport throws an exception, a rollback exception strategy rolls back the transaction so the transport can return a message to its original state for reprocessing.

* A *reliable* transport _does not consume_ a message as it travels through the flow until it can ascertain that the message has successfully reached the end of the flow.When a message using a reliable transport throws an exception, the rollback exception strategy discards the partially processed message and instructs the flow to attempt processing the original message again.

[WARNING]
====
If your flow involves a *reliable* transport and a rollback exception strategy, you must set the flow’s Processing Strategy to “synchronous”. (Configure the Processing Strategy in the Flow Properties panel.) This is because *reliable* transports do not consume messages, they wait for messages to successfully complete a flow before consuming it; therefore, the flow must process synchronously.

If you deploy a Mule application that contains a flow with an asynchronous processing strategy and a rollback exception strategy configured for message redelivery, the application will fail!
====

[width="100%",cols="34%,33%,33%",options="header",]
|===
|Transport |Type |When an exception occurs...
|VM |transactional |the message rolls back to its original state for reprocessing
|JDBC |transactional |the message rolls back to its original state for reprocessing
|JMS |transactional |the message rolls back to its original state for reprocessing
|JMS |reliable |the session recovers (i.e. Mule discards the copy of the source file and attempts reprocessing the message using a fresh copy)
|FTP |reliable |Mule discards the copy of the source file and attempts reprocessing the message using a fresh copy.
|File |reliable |Mule discards the copy of the source file and attempts reprocessing the message using a fresh copy.
|IMAP |reliable |Mule does not move the message from the mailbox and attempts reprocessing the message using a fresh copy of the original.
|HTTP |reliable |Mule does not return an error message to the client and attempts reprocessing the message using a fresh copy of the original.
|===

== Use Rollback Exception Strategy for Unhandled Exceptions

At times, message processors in a flow encounter exceptions which they are unable to resolve by performing corrective measures; these types of errors are called "unhanded exceptions." Typically, all unhanded exceptions are handled by Mule's default exception strategy, but you can customize a rollback exception strategy to more efficiently route messages with unhandled exceptions.

Depending on the flow exchange pattern, a rollback exception strategy routes messages with unhanded exceptions in one of two ways:

* When the flow exchange pattern is **one-way**, the rollback exception strategy instructs the inbound endpoint transport to execute corrective actions.
* When the flow exchange pattern is **request-response**, rollback exception strategy changes the payload of a message and returns it to the client.

=== Rollback Exception Strategy vs. Default Exception Strategy

Where once you would have used Mule's default exception strategy to process unhanded exceptions, you can now configure the much improved rollback exception strategy to do so. To demonstrate the advantages rollback exceptions strategy has to offer, it is worthwhile noting some key differences in the methods each strategy employs when routing messages with unhanded exceptions.

Default Exception Strategy:

* stores the exception information in the payload of the message
* returns `null` in the exceptionPayload attributeMessage
* injects `NullPayload` as the message's payload; unable to customize
* records exception information in the exceptionPayload attribute; unable to customize

Rollback Exception Strategy:

* retains the information in the message payload at the time the exception was thrown; does not alter the message payload
* stores the exception information in the exceptionPayload
* returns the message processing result during execution of the exception strategy
* records exception information in the exceptionPayload attribute; able to customize

Where the default exception strategy faltered, rollback exception strategy performs. Using a rollback exception strategy, you can send messages with unhanded exceptions to a dead letter queue, send failure notifications, and change the result of a flow's execution.

== Configuring a Rollback Exception Strategy

Whether your flow involves transactional or reliable transports, you can configure its rollback exception strategy in Mule.

[tabs]
------
[tab,title="STUDIO Visual Editor"]
....

. From the *Error Handling* palette group, drag and drop the *Rollback Exception Strategy* icon into the footer bar of a flow. 
+
image:/docs/download/thumbnails/122752260/add_to_flow.png?version=1&modificationDate=1369089110094[image]

. Double-click the title bar of the *Rollback Exception Strategy* to open the Rollback Exception Strategy Properties, then configure the attributes according to the table below.
+
image:/docs/download/attachments/122752260/configure_rollback.png?version=1&modificationDate=1369089264304[image]
+
[width="100%",cols="34%,33%,33%",options="header",]
|===
|Field |Req'd |Value
|*Display Name* |x |A unique name for the rollback exception strategy in your application.
|*Max redelivery attempts* | x a|
Enter an integer to define the number of times you want the rollback exception strategy to rollback a message for reprocessing. If you set the default value to `0`, which means the rollback exception strategy will _not _attempt to redeliver the message and will throw a MessageRedeliveredException upon the first processing failure.

[WARNING]
If you enter nothing in the *Max redelivery attempts* field (i.e. leave the field blank), the rollback exception strategy will redeliver the message over and over again, creating an infinite loop. Refer to link:#RollbackExceptionStrategy-ConfiguringRedeliveryAttemptsinJMSGlobalConnector[Configuring Redelivery Attempts in JMS Global Connector] below to learn more about setting this value to `0`.

|*When* |  |Enter an expression to indicate the kind of exception the rollback exception should handle. +
• *expression _not_ defined:* all messages in this flow that throw exceptions will be handled by this rollback exception strategy.  +
• *expression defined:*  when Mule evaluates the expression against the message being processed and returns true, Mule executes the exception strategy. For example, if you enter +
`#[exception.causedBy(org.mule.example.AlreadyProcessedException)]`, +
only those messages which throw an `org.mule.example.AlreadyProcessedException` exception are handled by this exception strategy. Mule’s default exception strategy implicitly handles all exceptions which do not match the expression you have defined in the When field.
|*Enable Notifications* |  |true (_default_) +
false   +
When set to true, instructs Mule to send an exception notification to a registered listener — for example, the Mule Management Console — whenever a message throws an exception in this flow.
|===
+
[TIP]
====
What follows are some examples of expressions that you can enter in the *When* field:

* `exception.causedBy(org.mule.example.ExceptionType)`
* `exception.causedExactlyBy(org.mule.example.ExceptionType)`
* `exception.causeMatches(org.mule.example.*)`
* `exception.causeMatches(*) && !exception.causedBy(java.lang.ArithmeticException) && !exception.causedBy(org.mule.api.registry.ResolverException)
====

. Drag building blocks from the palette into the *Rollback Exception Strategy* box to build a flow that processes messages that throw exceptions in the parent flow. A rollback exception strategy can contain any number of message processors.
+
[NOTE]
====
If your flow uses a *reliable* transport, you can stop at this point and _not_ configure a *redelivery exhausted* sub flow. If you choose not to configure a redelivery exhausted sub flow:

. a message that exceeds its redelivery attempts (a.k.a. “a poisoned message”) throws a MessageRedeliveredException
. the exception strategy commits the transaction
. the exception strategy consumes the message
====

. Drag building blocks from the palette into the *redelivery exhausted* box to build a flow that processes messages which exceed the maximum number of redelivery attempts. For example, you may wish to use redelivery exhausted to direct all “poisoned messages” to a dead letter queue. A redelivery exhausted flow can contain any number of message processors.

[WARNING]
You can define _only one_ exception strategy for each flow. If you need to design a more complex error handling strategy that involves more than one way of handling exceptions, consider using a link:/docs/display/current/Choice+Exception+Strategy[Choice Exception Strategy].

....
[tab,title="XML Editor or Standalone"]
....

. In your flow, below all the message processors, add a **`rollback-exception-strategy`** element. Refer to code below.
. Configure attributes of the exception strategy according to the table below.
+
[width="100%",cols="34%,33%,33%",options="header",]
|======
|Attribute |Req'd |Value
|*doc:name* |x |A unique name for the rollback exception strategy in your application. +
Not required in Standalone. 
|*maxRedeliveryAttempts* | x |Use an integer to define the number of times you want the rollback exception strategy to rollback a message for reprocessing. If you set the default value to `0`, which means the rollback exception strategy will _not _attempt to redeliver the message and will throw a MessageRedeliveredException upon the first processing failure. Refer to link:#RollbackExceptionStrategy-ConfiguringRedeliveryAttemptsinJMSGlobalConnector[Configuring Redelivery Attempts in JMS Global Connector] below to learn more about setting this value to `0`.
|*when* |  |Define an expression to indicate the kind of exception the rollback exception should handle. +
• *expression _not_ defined:* all messages in this flow that throw exceptions will be handled by this rollback exception strategy.  +
• *expression defined:*  when Mule evaluates the expression against the message being processed and returns true, Mule executes the exception strategy. For example, if you enter +
`#[exception.causedBy(org.mule.example.AlreadyProcessedException)]`, +
only those messages which throw an `org.mule.example.AlreadyProcessedException` exception are handled by this exception strategy. Mule’s default exception strategy implicitly handles all exceptions which do not match the expression you have defined in the when attribute.
|*enableNotifications* |  |true (_default_) +
false   +
When set to true, Mule to send an exception notification to a registered listener — say, the Mule Management Console — whenever the catch exception strategy accepts handles an exception.
|======
+
[source, xml]
----
<rollback-exception-strategy maxRedeliveryAttempts="0" doc:name="My Rollback Exception Strategy" when="exception.causedBy(org.mule.example.ExceptionType)" enableNotifications="true"/>
----
+
[TIP]
====
What follows are some examples of expressions that you can enter in the *When* field:

* `exception.causedBy(org.mule.example.ExceptionType)`
* `exception.causedExactlyBy(org.mule.example.ExceptionType)`
* `exception.causeMatches(org.mule.example.*)`
* `exception.causeMatches(*) && !exception.causedBy(java.lang.ArithmeticException) && !exception.causedBy(org.mule.api.registry.ResolverException)
====

. Add child elements to your `rollback-exception-strategy` to build a flow that processes messages that throw exceptions in the parent flow. A rollback exception strategy can contain any number of message processors.
+
[NOTE]
====
If your flow uses a *reliable* transport, you can stop at this point and _not_ configure a *redelivery exhausted* sub flow. If you choose not to configure a redelivery exhausted sub flow:

. a message that exceeds its redelivery attempts (a.k.a. “a poisoned message”) throws a MessageRedeliveredException
. the exception strategy commits the transaction
. the exception strategy consumes the message
====

. Add an *`on-redelivery-attempts-exceeded`* child element to your `rollback-exception-strategy` element at the bottom, below all the message processors included in the exception strategy.
. Add child elements to your `on-redelivery-attempts-exceeded` child element to build a flow that processes messages which exceed the maximum number of redelivery attempts. For example, you may wish to use redelivery exhausted to direct all “poisoned messages” to a dead letter queue. A redelivery exhausted flow can contain any number of message processors.

[WARNING]
You can define _only one_ exception strategy for each flow. If you need to design a more complex error handling strategy that involves more than one way of handling exceptions, consider using a link:/docs/display/33X/Choice+Exception+Strategy[Choice Exception Strategy].

....
------

== Configuring Redelivery Attempts in JMS Global Connector

Mule creates a http://itlaw.wikia.com/wiki/Message_digest[digest ]of a message’s payload in order to generate a redelivery attempt ID. Mule uses this unique ID as part of its *redelivery policy* which keeps track of the number of message redelivery attempts. (To generate a digest, Mule applies a hash function to the message to obtain a fixed-size bit string that is unique to the message.)

You can use a link:/docs/display/33X/JMS+Transport+Reference[JMS global connector]'s redelivery policy to improve the performance of a flow that processes very large or streaming message payloads. Rather than generating a unique ID from a message's (potentially large or streaming) payload, a JMS global connector uses its JMSRedelivery property to keep track of message redelivery attempts.

If your flow uses a JMS global connector, you can configure it to manage the redelivery policy by defining its *Max Redelivery*.

[tabs]
------
[tab,title="STUDIO Visual Editor"]
....

. In the Global Elements tab, double-click to open the **JMS Global Connector's** Global Element Properties panel, then click the *Advanced* tab.
. Enter an integer in the *Max Redelivery* field to define the number of times you want the rollback exception strategy to rollback a message for reprocessing, and click *OK* to save your changes. Note that the default value of this field is set to `-1`; this ensures that the JMS global connector’s redelivery policy defers to your rollback exception strategy’s redelivery policy by default.
+
image:/docs/download/attachments/122752260/max_redelivery_JMS.png?version=1&modificationDate=1369092186187[image]

. Click the *Message Flow* tab, then double-click title bar of your rollback exception strategy.
. In the Rollback Exception Strategy Properties panel that appears, enter a “0” in the *Max redelivery attempts* field and click *OK* to save your changes.
. Refer to the table below to learn more about entering a value in the maxDelivery fields.

....
[tab,title="XML Editor or Standalone"]
....

. To your global `jms:connector` element set above all the flows in your Mule project, add a *`maxRedelivery`* attribute and set the value to an integer to define the number of times you want the rollback exception strategy to rollback a message for reprocessing (see code below). Note that if you set the value of the attribute to **`-1`**`,` the JMS global connector’s redelivery policy defers to your rollback exception strategy’s redelivery policy by default.
+
[source, xml]
----
<jms:connector name="JMS" validateConnections="true" maxRedelivery="1" doc:name="JMS"/>
----

. To the *`rollback-exception-strategy`* element in your flow, set the value of the `maxRedeliveryAttempts` attribute to "0". Setting to "0" instructs Mule to use the value of maxRedelivery in the global JMS connector's configuration.
. Refer to the table below to learn more about the setting the value of the maxDelivery attributes.

....
------

[WARNING]
If your flow uses a JMS global connector and you _do not_ want the connector to manage your rollback strategy’s redelivery policy, then be sure to set the connector’s max redelivery value to `-1`. This ensures that the JMS global connector’s redelivery policy defers to your rollback exception strategy’s redelivery policy by default.

[width="100%",cols="20%,20%,20%,20%,20%",options="header",]
|===
|Rollback Exception Strategy configured in flow? |Max Redelivery Set in Rollback ES in the flow |Max Redelivery Set in JMS Global Connector |Redelivery Exhausted Configured? |Result
|yes |3 |-1 |yes |Rollback exception strategy redelivers the message to parent flow 3 times. After 3 failures, message throws a MessageRedeliveredException. Rollback exception strategy routes message to redelivery exhausted for processing before committing the transaction and consuming the message.
|yes |3 |-1 |no |Rollback exception strategy redelivers the message to parent flow 3 times. After 3 failures, message throws a MessageRedeliveredException. Rollback exception strategy commits the transaction and consumes the message.
|yes |0 |-1 |no |Rollback exception strategy redelivers the message over and over again, creating an infinite loop.
|yes |0 |-1 |yes |Rollback exception strategy redelivers the message over and over again, creating an infinite loop.
|yes |0 |4 |yes |Rollback exception strategy redelivers the message to parent flow 4 times, as per the JMS global connector redelivery policy. After 4 failures, message throws a MessageRedeliveredException. Rollback exception strategy routes message to redelivery exhausted for processing before committing the transaction and consuming the message.
|===

== Creating a Global Rollback Exception Strategy

You can create one or more link:/docs/display/33X/Error+Handling[global exception strategies] to reuse in flows throughout your entire Mule application. First, create a global rollback exception strategy, then add a link:/docs/display/33X/Reference+Exception+Strategy[*Reference Exception Strategy*] to a flow to apply the error handling behavior of your new global rollback exception strategy.

[tabs]
------
[tab,title="STUDIO Visual Editor"]
....

. In the Global Elements tab, create a *Rollack Exception Strategy*. 
. Refer to step 2 link:#RollbackExceptionStrategy-ConfiguringaRollbackExceptionStrategy[above] to configure your global rollback exception strategy.
. Click the *Message Flow* tab below the canvas. On the Message Flow canvas, note that your newly created global rollback exception strategy box appears _outside_ the parent flow. Because it is global, your new rollback exception strategy exists independently of any Mule flow.
+
image:/docs/download/attachments/122752260/global_rollback_ES.png?version=1&modificationDate=1366829700244[image]

. Follow steps 3 - 5 link:#RollbackExceptionStrategy-ConfiguringaRollbackExceptionStrategy[above] to build your global rollback exception strategy flow and redelivery exhausted flow.

....
[tab,title="XML Editor or Standalone"]
....

. Above all the flows in your application, create a `rollback`**`-exception-strategy`** element.
.  To this global `rollback-exception-strategy` element, add the attributes according to step 2  link:#RollbackExceptionStrategy-ConfiguringaRollbackExceptionStrategy[above].
. Follow steps 3 - 5 link:#RollbackExceptionStrategy-ConfiguringaRollbackExceptionStrategy[above] to build your global rollback exception strategy flow and redelivery exhausted flow.

....
------

=== Applying a Global Rollback Exception Strategy to a Flow

Use a link:/docs/display/33X/Reference+Exception+Strategy[reference exception strategy] to instruct a flow to employ the error handling behavior defined by your global rollback exception strategy. In other words, you must ask your flow to refer to the global rollback exception strategy for instructions on how to handle errors.

[tabs]
------
[tab,title="STUDIO Visual Editor"]
....

. From the *Error Handling* palette group, drag and drop the *Reference Exception Strategy* icon into the footer bar of a flow. 
+
image:/docs/download/attachments/122752260/reference_ES.png?version=1&modificationDate=1366829700356[image]

. Double-click to open the *Reference Exception Strategy* Pattern Properties panel. 
+
image:/docs/download/attachments/122752260/global_reference.png?version=1&modificationDate=1369094544061[image]

. Use the drop-down to select your *Global Exception Strategy*.

. Click *OK* to save your changes.
+
[NOTE]
You can create a global rollback exception strategy (i.e. access the Choose Global Type panel) from the reference exception strategy’s pattern properties panel. Click the image:/docs/s/en_GB/3391/c989735defd8798a9d5e69c058c254be2e5a762b.76/_/images/icons/emoticons/add.png[(plus)] button next to the *Global Exception Strategy* drop-down and follow the steps link:#RollbackExceptionStrategy-CreatingaGlobalChoiceExceptionStrategy[above] to create a global choice exception strategy.

....
[tab,title="XML Editor or Standalone"]
....

. In your flow, below all the message processors, add a **`reference-exception-strategy`** element. Refer to code below.
. Configure attributes of the exception strategy according to the table below.
+
[cols=",,",options="header",]
|===
|Attribute |Req'd |Value
|*ref* |x |The name of the global exception strategy to which your flow should refer to handle exceptions.
|*doc:name* |x |A unique name for the rollback exception strategy in your application. +
Not required in Standalone. 
|===
+
[source, xml]
----
<exception-strategy ref="Global_Rollback_Exception_Strategy" doc:name="Reference Exception Strategy"/>
----

....
------

[TIP]
You can append a *Reference Exception Strategy* to any number of flows in your Mule application and instruct them to refer to any of the global catch, rollback or choice exception strategies you have created. You can direct any number of reference exception strategies to refer to the same global exception strategy.

== See Also

* Learn how to configure link:/docs/display/33X/Catch+Exception+Strategy[catch exception strategies].
* Learn how to configure link:/docs/display/33X/Choice+Exception+Strategy[choice exception strategies].
